# django_petvida

./: .gitignore  README.md  codigos.txt  manage.py  pyproject.toml
clinica/: admin.py  apps.py  firebase_init.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
clinica/api/: serializers.py
clinica/migrations/: 0001_initial.py  0002_agendamento_status.py  0002_tratamento_tipo_tratamento.py  0003_servicos_duracao_minutos.py  0004_cliente_fcm_token.py  0005_alter_cliente_cpf_alter_cliente_email_and_more.py
clinica/templates/: agendamentos_do_dia.html  agendar_servico.html  base.html  buscar_animal.html  cadastrar_agendamento.html  confirmar_exclusao.html  editar_agendamento.html  formulario.html  formulario_edicao.html  historico_clinico.html  index.html  listar_agendamentos.html  listar_animais.html  listar_clientes.html  listar_vacinas.html  listar_veterinarios.html  menu.html
clinica/templates/registration/: logged_out.html  login.html  register.html
petvida/: asgi.py  settings.py  urls.py  wsgi.py
